--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,18 @@
     <color name="amber300">#FFD54F</color>
     <color name="indigo300">#7986CB</color>
     <color name="green300">#81C784</color>
+
+    <color name="grey100">#f5f5f5</color>
     <color name="grey800">#424242</color>
     <color name="grey900">#212121</color>
+
+    <color name="red600">#e53935</color>
+
+    <color name="empty_list_icon_tint">#212121</color>
+    <color name="listItemBgLight">#2e2e2e</color>
+    <color name="listItemBgDark">#212121</color>
+    <color name="whiteText">#CFCFCF</color>
+    <color name="bestTime">@color/indigo300</color>
+    <color name="record">#7E57C2</color>
 
 </resources>
