--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#303F9F</color>
+    <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="blackText">#212121</color>
+    <color name="darkBg">#111111</color>
+    <color name="darkerBg">#010101</color>
 
     <color name="amber300">#FFD54F</color>
     <color name="indigo300">#7986CB</color>
@@ -12,13 +16,16 @@
     <color name="grey800">#424242</color>
     <color name="grey900">#212121</color>
 
-    <color name="red600">#e53935</color>
+    <color name="red_200">#EF9A9A</color>
+    <color name="red_400">#EF5350</color>
+    <color name="red_600">#E53935</color>
 
     <color name="empty_list_icon_tint">#212121</color>
     <color name="listItemBgLight">#2e2e2e</color>
     <color name="listItemBgDark">#212121</color>
     <color name="whiteText">#CFCFCF</color>
+    <color name="lastlap">@color/amber300</color>
     <color name="bestTime">@color/indigo300</color>
-    <color name="record">#7E57C2</color>
+    <color name="record">#ba68c8</color>
 
 </resources>
