--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -34,7 +34,6 @@
             android:layout_weight="1"
             android:background="#111111"
             android:padding="8dp"
-            android:paddingStart="16dp"
             android:text=" &#64; "
             android:textAlignment="center"
             android:textColor="#f5f5f5"
@@ -261,7 +260,7 @@
                     android:minHeight="0dp"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
-                    android:text="reset app"
+                    android:text="restart"
                     android:textSize="14sp"/>
             </LinearLayout>
 
