--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -30,4 +30,9 @@
         android:title="About"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/exit_app"
+        android:title="Exit"
+        app:showAsAction="never"/>
+
 </menu>
