Added 'diff with record' 5s dialog when crossing finish line. Fixed negative gap in getGapStr method in Lap class.

--- a/app/src/main/res/layout-sw600dp/one_track_list_item.xml
+++ b/app/src/main/res/layout-sw600dp/one_track_list_item.xml
@@ -11,9 +11,9 @@
         android:id="@+id/car_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="40"
         android:maxLines="1"
-        android:paddingEnd="0dp"
+        android:paddingEnd="8dp"
         android:paddingStart="16dp"
         android:gravity="start"
         android:textSize="@dimen/medium_text"
@@ -23,9 +23,9 @@
         android:id="@+id/laptime_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="20"
         android:maxLines="1"
-        android:paddingEnd="0dp"
+        android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:gravity="center"
         android:textSize="@dimen/medium_text"
@@ -35,11 +35,11 @@
         android:id="@+id/gap_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="20"
         android:maxLines="1"
-        android:paddingEnd="0dp"
+        android:paddingEnd="32dp"
         android:paddingStart="8dp"
-        android:gravity="center"
+        android:gravity="end"
         android:textSize="@dimen/medium_text"
         android:textColor="@color/whiteText"/>
 
@@ -47,9 +47,9 @@
         android:id="@+id/nlaps_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="10"
         android:maxLines="1"
-        android:paddingEnd="0dp"
+        android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:gravity="center"
         android:textSize="@dimen/medium_text"
@@ -59,7 +59,9 @@
         android:id="@+id/top_speed_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="10"
+        android:paddingEnd="16dp"
+        android:paddingStart="8dp"
         android:gravity="center"
         android:maxLines="1"
         android:textSize="@dimen/medium_text"
