--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -319,10 +319,12 @@
                     android:id="@+id/car_btn"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
+                    android:layout_weight="4"
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="8dp"
                     android:text="CAR"
                     android:gravity="center"
                     android:textColor="#f5f5f5"
@@ -336,6 +338,8 @@
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="8dp"
                     android:text="LAPTIME"
                     android:gravity="center"
                     android:textColor="#f5f5f5"
@@ -345,12 +349,14 @@
                     android:id="@+id/gap_btn"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
+                    android:paddingEnd="48dp"
+                    android:paddingStart="8dp"
                     android:text="GAP"
-                    android:gravity="center"
+                    android:gravity="end"
                     android:textColor="#f5f5f5"
                     android:textSize="@dimen/xsmall_text"/>
 
@@ -362,6 +368,8 @@
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="8dp"
                     android:text="LAPS"
                     android:gravity="center"
                     android:textColor="#f5f5f5"
@@ -375,6 +383,8 @@
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="8dp"
                     android:text="KMH"
                     android:gravity="center"
                     android:textColor="#f5f5f5"
