--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -322,7 +322,7 @@
                     android:id="@+id/car_btn"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="3"
+                    android:layout_weight="4"
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
@@ -352,6 +352,8 @@
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="32dp"
                     android:text="GAP"
                     android:gravity="center"
                     android:textColor="#f5f5f5"
@@ -378,6 +380,8 @@
                     android:background="#111111"
                     android:paddingBottom="6dp"
                     android:paddingTop="6dp"
+                    android:paddingEnd="4dp"
+                    android:paddingStart="2dp"
                     android:text="KMH"
                     android:gravity="center"
                     android:textColor="#f5f5f5"
