--- a/app/src/main/res/layout/one_track_list_item.xml
+++ b/app/src/main/res/layout/one_track_list_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/car_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:maxLines="1"
         android:paddingEnd="2dp"
         android:paddingStart="8dp"
@@ -37,9 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:maxLines="1"
-        android:paddingEnd="0dp"
+        android:paddingEnd="8dp"
         android:paddingStart="8dp"
-        android:gravity="center"
+        android:gravity="end"
         android:textSize="@dimen/small_text"
         android:textColor="@color/whiteText"/>
 
