--- a/app/src/main/res/layout/session_list_item.xml
+++ b/app/src/main/res/layout/session_list_item.xml
@@ -13,9 +13,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:paddingEnd="8dp"
-        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="8dp"
         android:text="Lap number"
+        android:maxLines="1"
         android:textColor="@color/whiteText"
         android:textSize="@dimen/small_text"/>
 
@@ -23,10 +24,11 @@
         android:id="@+id/laptime_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
+        android:layout_weight="4"
         android:paddingEnd="4dp"
         android:paddingStart="4dp"
         android:text="Laptime"
+        android:maxLines="1"
         android:textColor="@color/whiteText"
         android:textSize="@dimen/small_text"
         android:gravity="center"/>
@@ -39,6 +41,7 @@
         android:paddingEnd="8dp"
         android:paddingStart="4dp"
         android:text="Gap"
+        android:maxLines="1"
         android:textSize="@dimen/small_text"
         android:textColor="@color/whiteText"
         android:gravity="end"/>
