--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme"
@@ -12,6 +12,23 @@
     <style name="MyDialogTheme"
            parent="Theme.AppCompat.Light.Dialog">
         <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
+    <!-- Record dialog -->
+    <style name="recordDialog" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:background">@color/record</item>
+        <item name="android:textSize">@dimen/large_text</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <!-- no Record dialog -->
+    <style name="noRecordDialog" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:background">@color/lastlap</item>
+        <item name="android:textSize">@dimen/large_text</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+        <item name="android:titleTextColor" tools:targetApi="m">@android:color/black</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
 </resources>
