--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,9 @@
     <style name="recordDialog" parent="Theme.AppCompat.Dialog.Alert">
         <item name="android:background">@color/record</item>
         <item name="android:textSize">@dimen/large_text</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:titleTextColor" tools:targetApi="m">@android:color/white</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
@@ -25,10 +28,10 @@
     <style name="noRecordDialog" parent="Theme.AppCompat.Dialog.Alert">
         <item name="android:background">@color/lastlap</item>
         <item name="android:textSize">@dimen/large_text</item>
-        <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:textColorSecondary">@android:color/black</item>
-        <item name="android:titleTextColor" tools:targetApi="m">@android:color/black</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColorPrimary">@color/darkBg</item>
+        <item name="android:textColorSecondary">@color/darkBg</item>
+        <item name="android:titleTextColor" tools:targetApi="m">@color/darkBg</item>
+        <item name="android:textColor">@color/darkBg</item>
     </style>
 
 </resources>
